2017-06-13  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgdiplus.cpp:  Cleartype text antialiasing seems to be only
	applied to horizontal text.  Use grayscale antialiasing for rotated
	text.

	* src/win/wgdiplus.cpp (InitFont_gdiplus):  Fix double application of
	fontscale.

	* src/win/wgraph.c (WriteGraphIni):  Only save window size and position
	for standalone graph windows.

	* src/win/wd2d.cpp (W_line_width):  Enforce a minimum line width of 1
	pixel to avoid tiny dash patterns for grids in polar plots.

2017-06-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/util.c (gprintf):  Sanity check for NULL format

	* src/datafile.c (df_open):  Sanity check to catch "plot '+' binary ..."

	* src/plot2d.c (eval_plots):  image plots cannot use '+' as input

	* src/gadgets.c (do_timelable):  Previously we modified timelabel.text
	in place and then restored it afterwards.  If the routine exited via
	int_error, the restore never happened.  Fix: make a use-once copy of
	timelabel and print that instead.

	* src/hidden3d.c (build_networks):  Empirical fix for array overrun 
	faults found by fuzzing data fed to '-'.  I don't understand the true
	general case that fails but ignoring input curves with "length <= 1"
	fixes the cases found by fuzzing.  I worry there could be legitimate
	cases that this filter also catches although I haven't found one.

	* src/axis.c (clone_linked_axis):  Sanity check that inverse mapping
	function does not yield NaN at axis range endpoints.

	* src/graphics.c (process_image):  Sanity check for empty image data
	structure.

2017-06-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/show.c (show_version):  Remove obsolete configuration options
	from the list shown by "show version long".

2017-06-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_border):  Autoscaled rrange should not disable
	polar border.  Polar border should not be clipped to xy border.

2017-06-07  Bastian Maerkisch  <bmaerkisch@web.de>