@@ -1,5 +1,5 @@
 /*
- * $Id: winmain.c,v 1.100 2017/05/20 16:43:19 markisch Exp $
+ * $Id: winmain.c,v 1.101 2017/05/20 18:28:19 markisch Exp $
  */
 
 /* GNUPLOT - win/winmain.c */
@@ -77,6 +77,9 @@
 #include "wcommon.h"
 #ifdef HAVE_GDIPLUS
 #include "wgdiplus.h"
+#endif
+#ifdef HAVE_D2D
+#include "wd2d.h"
 #endif
 #ifdef WXWIDGETS
 #include "wxterminal/wxt_term.h"
@@ -191,6 +194,9 @@ WinExit(void)
 #endif
 #ifdef HAVE_GDIPLUS
     gdiplusCleanup();
+#endif
+#ifdef HAVE_D2D
+    d2dCleanup();
 #endif
     CoUninitialize();
     return;
@@ -1238,7 +1244,7 @@ ConsoleHandler(DWORD dwType)
 	DWORD written;
 
 	// NOTE: returning from this handler terminates the application.
-	// Insteadm, we signal the main thread to clean up and exit and
+	// Instead, we signal the main thread to clean up and exit and
 	// then idle by sleeping.
 	terminate_flag = TRUE;
 	// send ^D to main thread input queue
@@ -1259,6 +1265,7 @@ ConsoleHandler(DWORD dwType)
     return FALSE;
 }
 #endif
+
 
 /* public interface to printer routines : Windows PRN emulation
  * (formerly in win.trm)
